--- a/metadata.yaml
+++ b/metadata.yaml
@@ -30,5 +30,6 @@ subjects:
 - !lcsh 'South Pacific Ocean -- Fiction'
 - !lcc 'PZ'
 - !lcsh 'Shipwrecks -- Fiction'
+- GITenberg
 title: Philosopher Jack
 url: http://www.gutenberg.org/ebooks/21756
